Style for login/password

--- a/index3.html
+++ b/index3.html
@@ -15,21 +15,12 @@
 
 	<div id="container">
 		<form>
-			19;00
-			Login
-			<input type="text">
-			
-			<br /><br />
-			
-			Hasło
-			<input type="password">
-			
-			<br /><br />
-			
-			<input type="submit"value="Zaloguj się">
+	
+			<input type="text" placeholder = "login" onfocus="this.placeholder=''">
+			<input type="password" placeholder = "password">
+			<input type="submit"value="Log in">
 			
 		</form>
-	</div>
-	
+	</div>	
 </body>
 </html>
