--- a/index3.html
+++ b/index3.html
@@ -5,8 +5,7 @@
 	<title>Stylizowanie formularzy</title>
 	<meta name="description" content="Nauka podstawowego stylizowania elementów formularzy" />
 	<meta name="keywords" content="css, odcinek" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />		
 	<link rel="stylesheet" href="style3.css" type="text/css" />
 	
 </head>
@@ -16,8 +15,8 @@
 	<div id="container">
 		<form>
 	
-			<input type="text" placeholder = "login" onfocus="this.placeholder=''">
-			<input type="password" placeholder = "password">
+			<input type="text" placeholder = "login" onfocus="this.placeholder=''" onblur="this.placeholder='login'">
+			<input type="password" placeholder = "password" onfocus="this.placeholder=''" onblur="this.placeholder='password'">
 			<input type="submit"value="Log in">
 			
 		</form>
